# mlflow-spike

./: .gitignore  CLAUDE.md  README.md  build_hook.py  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
tests/: test_main.py
