[project]
name = "mlflow-spike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "isort>=7.0.0",
    "mlflow>=3.5.1",
    "pandas>=2.3.3",
    "ruff>=0.14.4",
    "scikit-learn>=1.7.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "mlruns",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["mlruns/*", ".venv/*", "build/*", "dist/*"]

[build-system]
requires = ["hatchling", "isort>=7.0.0", "ruff>=0.14.4"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[tool.hatch.build.hooks.custom]
path = "build_hook.py"
